<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/enter_your_name"
            android:hint="@string/enter_your_name"
            android:inputType="text" />

        <TextView
            android:id="@+id/text_question_1"
            style="@style/QuestionText"
            android:text="@string/text_question_1" />

        <RadioGroup style="@style/RadioGroup">

            <RadioButton
                android:id="@+id/radio_question_1_answer_a"
                style="@style/RadioGroup.RadioButton"
                android:text="@string/question_1_answer_a" />

            <RadioButton
                android:id="@+id/radio_question_1_answer_b"
                style="@style/RadioGroup.RadioButton"
                android:text="@string/question_1_answer_b" />

            <RadioButton
                android:id="@+id/radio_question_1_answer_c"
                style="@style/RadioGroup.RadioButton"
                android:text="@string/question_1_answer_c" />

            <RadioButton
                android:id="@+id/radio_question_1_answer_d"
                style="@style/RadioGroup.RadioButton"
                android:text="@string/question_1_answer_d" />

        </RadioGroup>

        <TextView
            android:id="@+id/text_question_2"
            style="@style/QuestionText"
            android:text="@string/text_question_2" />

        <RadioGroup style="@style/RadioGroup">

            <RadioButton
                android:id="@+id/radio_question_2_answer_a"
                style="@style/RadioGroup.RadioButton"
                android:text="@string/question_2_answer_a" />

            <RadioButton
                android:id="@+id/radio_question_2_answer_b"
                style="@style/RadioGroup.RadioButton"
                android:text="@string/question_2_answer_b" />

            <RadioButton
                android:id="@+id/radio_question_2_answer_c"
                style="@style/RadioGroup.RadioButton"
                android:text="@string/question_2_answer_c" />

            <RadioButton
                android:id="@+id/radio_question_2_answer_d"
                style="@style/RadioGroup.RadioButton"
                android:text="@string/question_2_answer_d" />

        </RadioGroup>

        <TextView
            android:id="@+id/text_question_3"
            style="@style/QuestionText"
            android:text="@string/text_question_3" />

        <RadioGroup style="@style/RadioGroup">

            <RadioButton
                android:id="@+id/radio_question_3_answer_a"
                style="@style/RadioGroup.RadioButton"
                android:text="@string/question_2_answer_a" />

            <RadioButton
                android:id="@+id/radio_question_3_answer_b"
                style="@style/RadioGroup.RadioButton"
                android:text="@string/question_2_answer_b" />

            <RadioButton
                android:id="@+id/radio_question_3_answer_c"
                style="@style/RadioGroup.RadioButton"
                android:text="@string/question_2_answer_c" />

            <RadioButton
                android:id="@+id/radio_question_3_answer_d"
                style="@style/RadioGroup.RadioButton"
                android:text="@string/question_2_answer_d" />

        </RadioGroup>

        <TextView
            android:id="@+id/text_question_4"
            style="@style/QuestionText"
            android:text="@string/text_question_4" />

        <RadioGroup style="@style/RadioGroup">

            <RadioButton
                android:id="@+id/radio_question_4_answer_a"
                style="@style/RadioGroup.RadioButton"
                android:text="@string/question_4_answer_a" />

            <RadioButton
                android:id="@+id/radio_question_4_answer_b"
                style="@style/RadioGroup.RadioButton"
                android:text="@string/question_4_answer_b" />

            <RadioButton
                android:id="@+id/radio_question_4_answer_c"
                style="@style/RadioGroup.RadioButton"
                android:text="@string/question_4_answer_c" />

            <RadioButton
                android:id="@+id/radio_question_4_answer_d"
                style="@style/RadioGroup.RadioButton"
                android:text="@string/question_4_answer_d" />

        </RadioGroup>

        <TextView
            android:id="@+id/text_question_5"
            style="@style/QuestionText"
            android:text="@string/text_question_5" />

        <CheckBox
            android:id="@+id/check_question_5_answer_a"
            style="@style/RadioGroup.RadioButton"
            android:text="@string/question_5_answer_a" />

        <CheckBox
            android:id="@+id/check_question_5_answer_b"
            style="@style/RadioGroup.RadioButton"
            android:text="@string/question_5_answer_b" />

        <CheckBox
            android:id="@+id/check_question_5_answer_c"
            style="@style/RadioGroup.RadioButton"
            android:text="@string/question_5_answer_c" />

        <CheckBox
            android:id="@+id/check_question_5_answer_d"
            style="@style/RadioGroup.RadioButton"
            android:text="@string/question_5_answer_d" />

        <Button
            android:id="@+id/button_submit"
            style="@style/QuestionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_32dp"
            android:background="@drawable/shape_button"
            android:text="@string/submit" />


    </LinearLayout>

</ScrollView>